@@ -56,7 +56,7 @@
           <scalar>4.94</scalar>
         </property>
         <property dictRef="me:deltaEDown">
-          <scalar units="cm-1" lower="160" upper="200" stepsize="10">230.0</scalar>
+          <scalar units="cm-1" lower="160" upper="200" stepsize="10">190.0</scalar>
         </property>
         <property dictRef="me:spinMultiplicity">
           <scalar>2</scalar>
@@ -88,7 +88,7 @@
       </bondArray>
       <propertyList>
         <property dictRef="me:ZPE">
-          <scalar units="cm-1" lower="10000" upper="14000" stepsize="10">12275.0</scalar>
+          <scalar units="cm-1" lower="10000" upper="14000" stepsize="10">13000.0</scalar>
         </property>
         <property dictRef="me:rotConsts">
           <array units="cm-1">
